hphp/hack/test/typecheck/xhp_modifier/xhp_modifier_no_colon.php.exp
File "xhp_modifier_no_colon.php", line 4, characters 11-11:
A name is expected here. (Parsing[1002])
File "xhp_modifier_no_colon.php", line 4, characters 11-11:
Encountered unexpected text ':', was expecting a class element. (Parsing[1002])
